# xy_console

./: MANIFEST.in  README.md  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
xy_console/: Console.py  ModuleData.py  utils.py
xy_console/execute/: Main.py
